manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vimeo-assignment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vimeo-assignment
  template:
    metadata:
      labels:
        app: vimeo-assignment
    spec:
      containers:
      - name: vimeo-assignment
        image: nadavweidman/vimeo-assignment:latest
        ports:
        - containerPort: 5005
