manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vimeo-assignment
spec:
  type: NodePort
  selector:
    app: vimeo-assignment
  ports:
  - port: 5005
    targetPort: 5005
